Access LDPS register in re_reset() only on 8169S single chip variants. From OpenBSD and FreeBSD drivers via PR kern/41009, and Realtek-supplied FreeBSD driver.